force-app/main/default/objects/ClaimLog__c/ClaimLog__c.object-meta.xml
<CustomObject>
    <label>Claim Log</label>
    <nameField>
        <displayFormat>CLL-{00000}</displayFormat>
        <label>Claim Log#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claim Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>