force-app/main/default/objects/ClaimLog__c/fields/ActionTaken__c.field-meta.xml
<CustomField>
    <fullName>ActionTaken__c</fullName>
    <label>Action Taken</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>