force-app/main/default/objects/ClaimLog__c/fields/ActionTakenBy__c.field-meta.xml
<CustomField>
    <fullName>ActionTakenBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action Taken By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ClaimLogs</relationshipName>
    <type>Lookup</type>
</CustomField>