force-app/main/default/objects/ClaimLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Claim__c</columns>
    <columns>AgentName__c</columns>
    <columns>ActionTakenBy__c</columns>
    <columns>ActionTaken__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>